<resources>
    <string name="app_name">PRM392_Team333_CourtBooking</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login_description">Login Button</string>
    <string name="logo_description">Logo</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="text_login"> "Let's login"</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_google">Sign in by Google</string>
    <string name="no_account">Not yet account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="who">Who are you? </string>
    <string name="player_role">Player</string>
    <string name="court_owner_role">Court owner</string>
    <string name="continuee">Continue</string>
    <string name="court_owner_information">Personal information</string>
    <string name="full_name">Full name</string>
    <string name="hint_full_name">Michael Johnson</string>
    <string name="contact_information">Contact information</string>
    <string name="view_detail"><u>View detail >>></u></string>
    <string name="avatar">\n</string>
    <string name="email">Email</string>
    <string name="hint_contact_information">Email</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="home_page">Home Page</string>
    <string name="edit">+</string>
    <string name="reply"><u>Reply</u></string>
</resources>