<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/start_image"
        android:layout_width="315dp"
        android:layout_height="253dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/ic_logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/retangle_button"
        android:backgroundTint="@color/orange_400"
        android:paddingVertical="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/retangle_button"
        android:backgroundTint="@color/blue_dark"
        android:paddingVertical="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>