<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/baseline_arrow_back_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="80dp"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@drawable/left_rounded_green_line"/>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@color/lime_green"/>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@color/lime_green"/>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@drawable/right_rounded_green_line"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_court_owner_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/court_owner_information"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:labelFor="@+id/tv_full_name"
        android:hint="@string/hint_full_name"
        android:background="@drawable/retangle_input"
        android:padding="10dp"
        android:backgroundTint="#1732CD32"
        android:autofillHints="name"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/tv_contact_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_information"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/et_contact_information"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:labelFor="@+id/tv_full_name"
        android:hint="@string/hint_contact_information"
        android:background="@drawable/retangle_input"
        android:padding="10dp"
        android:backgroundTint="#1732CD32"
        android:autofillHints="name"
        android:inputType="textPersonName"
        />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuee"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/continue_button"
        />

</LinearLayout>
