<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="80dp"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@drawable/left_rounded_green_line"/>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@color/lime_green"/>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@color/light_gray"/>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_gray_line"/>
    </LinearLayout>



    <TextView
        android:id="@+id/tv_who"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:cardElevation="9dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/player_image"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/player_role"
                    android:textColor="@color/dim_gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:cardElevation="9dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/court_owner_image"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/court_owner_role"
                    android:textColor="@color/dim_gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuee"
        android:layout_marginTop="300dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/continue_button"
        />

</LinearLayout>
