<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="80dp"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:background="@drawable/left_rounded_green_line"/>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:background="@color/lime_green"/>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:background="@color/lime_green"/>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:background="@drawable/right_rounded_green_line"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_court_owner_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/court_owner_information"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/tv_full_name"
            android:hint="@string/hint_full_name"
            android:background="@drawable/retangle_input"
            android:padding="10dp"
            android:backgroundTint="#1732CD32"
            android:autofillHints="name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_contact_information"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/tv_full_name"
            android:hint="@string/hint_contact_information"
            android:background="@drawable/retangle_input"
            android:padding="10dp"
            android:backgroundTint="#1732CD32"
            android:autofillHints="name"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/sign_up_court"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Court information"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_court_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Court name"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_court_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/tv_court_name"
            android:hint="Name"
            android:background="@drawable/retangle_input"
            android:padding="10dp"
            android:backgroundTint="#1732CD32"
            android:autofillHints="name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Court address"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_province"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/tv_court_name"
            android:hint="Province / City"
            android:background="@drawable/retangle_input"
            android:padding="10dp"
            android:backgroundTint="#1732CD32"
            android:autofillHints="name"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/tv_court_name"
            android:hint="A Street"
            android:background="@drawable/retangle_input"
            android:padding="10dp"
            android:backgroundTint="#1732CD32"
            android:autofillHints="name"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_open_closed_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Court time"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_opening_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Open Time"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <!-- EditText for opening time -->
                <EditText
                    android:id="@+id/et_opening_time"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:hint="08:00"
                    android:gravity="center"
                    android:inputType="time"
                    android:background="@drawable/retangle_input"
                    android:backgroundTint="#1732CD32"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/tv_closing_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Closed Time"
                    android:textAlignment="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_closing_time"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:hint="22:00"
                    android:gravity="center"
                    android:inputType="time"
                    android:backgroundTint="#1732CD32"
                    android:background="@drawable/retangle_input"
                    android:padding="10dp" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Slots"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/slotContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_add_slot"
            android:layout_width="53dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Add new slot"
            android:src="@drawable/ic_plus" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/continue_button"
            android:text="Done"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
